--- a/templates/index.html
+++ b/templates/index.html
@@ -6,39 +6,25 @@
 
 {% block main %}
 
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Symbol</th>
-                <th>Name</th>
-                <th>Shares</th>
-                <th>Price</th>
-                <th>TOTAL</th>
-            </tr>
-        </thead>
-        <tfoot>
-            <tr>
-                <td colspan="4"></td>
-                <td>{{ grandtotal }}</td>
-            </tr>
-        </tfoot>
-        <tbody>
-            {% for stock in stocks %}
-                {% if stock["SUM(shares)"] != 0: %}
-                <tr>
-                    <td>{{ stock["symbol"] }}</td>
-                    <td>{{ quotes[stocks.index(stock)]["name"] }}</td>
-                    <td>{{ stock["SUM(shares)"] }}</td>
-                    <td>{{ quotes[stocks.index(stock)]["price"] }}</td>
-                    <td>{{ totals[stocks.index(stock)] }}</td>
-                </tr>
-                {% endif %}
-            {% endfor %}
-                <tr>
-                    <td colspan="1">CASH</td>
-                    <td colspan="3"></td>
-                    <td>{{ cash }}</td>
-                </tr>
-        </tbody>
-    </table>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("button").click(function(){
+    $.post("http://127.0.0.1:5000/",
+    {
+      name: "Donald Duck",
+      city: "Duckburg"
+    },
+    function(data,status){
+      alert("Data: " + data + "\nStatus: " + status);
+    });
+  });
+});
+</script>
+</head>
+<body>
+
+<button>Send an HTTP POST request to a page and get the result back</button>
+
+
 {% endblock %}
