--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,29 +20,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-        <title>FindSexualHealthCare</title>
+        <title>FindMyCondom</title>
 
         <link rel="stylesheet" href="https://openlayers.org/en/v5.3.0/css/ol.css" type="text/css">
 
         <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
-
-
-
-        <style>
-          [id^="marker"] {
-            width: 20px;
-            height: 20px;
-            border: 1px solid #088;
-            border-radius: 10px;
-            background-color: #0FF;
-            opacity: 0.5;
-          }
-
-
-          .popover-content {
-            min-width: 180px;
-          }
-        </style>
 
     </head>
 
@@ -51,8 +33,11 @@
 
 
         <nav class="navbar navbar-expand-md navbar-light bg-light border">
-            <div class="navbar-brand"><span class="grey">Find</span>
-            <span class="firebrick">Sexual</span><span class="blue">HealthCare</span></div>
+            <div class="navbar-brand">
+              <span class="grey">Find</span>
+              <span class="firebrick">My</span>
+              <span class="blue">Condom</span>
+            </div>
             <span class="navbar-text">
               SW24
             </span>
@@ -84,9 +69,7 @@
     </div>
 
 
-
-
-    <table class="table-dark">
+    <table class="table-dark" class="table-responsive table-body">
       <thead>
         <tr>
           <th scope="col">#</th>
@@ -107,12 +90,6 @@
         {% endfor %}
       </tbody>
     </table>
-
-
-
-
-
-
 
     <script>
 
@@ -156,8 +133,6 @@
           stopEvent: false
         });
         map.addOverlay(marker);
-
-
       {% endfor %}
 
       var geolocation = new Geolocation({
@@ -217,7 +192,8 @@
         </main>
 
         <footer class="small text-center text-muted">
-            Data provided for free by <a href="yelp">Yelp</a>.
+            Data provided for free by <a href="https://www.yelp.com/">Yelp</a>. View their terms of service
+            <a href="https://www.yelp.com/static?p=tos">here</a>. Created by Rodney Lafuente Mercado.
         </footer>
 
     </body>
