--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,8 @@
 
         <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
     </head>
 
     <body>
@@ -72,7 +74,7 @@
     <table class="table-dark" class="table-responsive table-body">
       <thead>
         <tr>
-
+          <th scope="col">#</th>
           <th scope="col">Name</th>
           <th scope="col">Address</th>
           <th scope="col">Phone</th>
@@ -82,6 +84,7 @@
       <tbody>
         {% for business in businesses %}
             <tr>
+              <th scope="row">{{loop.index}}</th>
               <td>{{business["name"]}}</td>
               <td>{{business["location"]["address1"]}}</td>
               <td>{{business["display_phone"]}}</td>
@@ -179,8 +182,11 @@
       geolocation.on('change:position', function() {
         var coordinates = geolocation.getPosition();
 
+        $.get(
+            "/",
+            { lon: coordinates[0], lat: coordinates[1] }
+          )
         view.setCenter(coordinates); view.setZoom(14);
-
         positionFeature.setGeometry(coordinates ?
           new Point(coordinates) : null);
       });
