--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,30 @@
 
         <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+
+
+        <style>
+          [id^="marker"] {
+            width: 20px;
+            height: 20px;
+            border: 1px solid #088;
+            border-radius: 10px;
+            background-color: #0FF;
+            opacity: 0.5;
+          }
+
+          #number {
+            text-decoration: none;
+            color: white;
+            font-size: 6pt;
+          }
+
+          .popover-content {
+            min-width: 180px;
+          }
+        </style>
+
 
     </head>
 
@@ -35,11 +58,13 @@
 
 
         <nav class="navbar navbar-expand-md navbar-light bg-light border">
+
             <div class="navbar-brand">
               <span class="grey">Find</span>
               <span class="firebrick">My</span>
               <span class="blue">Condom</span>
             </div>
+
             <span class="navbar-text">
               SW24
             </span>
@@ -63,6 +88,9 @@
 
     <div style="display: none;">
 
+      {% for business in businesses %}
+        <h1 class="overlay" id="number{{loop.index}}" target="_blank">{{loop.index}}</h1>
+      {% endfor %}
 
       {% for business in businesses %}
         <div id="marker{{loop.index}}" title="Marker"></div>
@@ -137,6 +165,7 @@
           stopEvent: false
         });
         map.addOverlay(marker);
+
       {% endfor %}
 
       var geolocation = new Geolocation({
