--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,9 +9,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
-        <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
-
+        <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
         <link href="/static/favicon.ico" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
@@ -28,7 +28,6 @@
 
 
 
-
         <style>
           [id^="marker"] {
             width: 20px;
@@ -38,36 +37,25 @@
             background-color: #0FF;
             opacity: 0.5;
           }
-
-          #number {
+          #vienna {
             text-decoration: none;
             color: white;
-            font-size: 6pt;
+            font-size: 11pt;
+            font-weight: bold;
+            text-shadow: black 0.1em 0.1em 0.2em;
           }
-
           .popover-content {
             min-width: 180px;
           }
         </style>
 
-
     </head>
 
     <body>
 
-
-
         <nav class="navbar navbar-expand-md navbar-light bg-light border">
+            <a class="navbar-brand" href="/"><span class="blue">Find</span><span class="red">My</span><span class="green">Condom</span>
 
-            <div class="navbar-brand">
-              <span class="grey">Find</span>
-              <span class="firebrick">My</span>
-              <span class="blue">Condom</span>
-            </div>
-
-            <span class="navbar-text">
-              SW24
-            </span>
         </nav>
 
         {% if get_flashed_messages() %}
@@ -81,16 +69,10 @@
         <main class="container p-5">
             <body>
 
-
-
     <div id="map" class="map"></div>
 
 
     <div style="display: none;">
-
-      {% for business in businesses %}
-        <h1 class="overlay" id="number{{loop.index}}" target="_blank">{{loop.index}}</h1>
-      {% endfor %}
 
       {% for business in businesses %}
         <div id="marker{{loop.index}}" title="Marker"></div>
@@ -99,30 +81,18 @@
     </div>
 
 
-    <table class="table-dark" class="table-responsive table-body">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Name</th>
-          <th scope="col">Address</th>
-          <th scope="col">Phone</th>
 
-        </tr>
-      </thead>
-      <tbody>
-        {% for business in businesses %}
-            <tr>
-              <th scope="row">{{loop.index}}</th>
-              <td>{{business["name"]}}</td>
-              <td>{{business["location"]["address1"]}}</td>
-              <td>{{business["display_phone"]}}</td>
+    <ul>
+    {% for business in businesses %}
+        <li>
+          {{ business["name"] }}
+        </li>
+    {% endfor %}
+    <ul>
 
-        {% endfor %}
-      </tbody>
-    </table>
+
 
     <script>
-
       var Feature = ol.Feature;
       var Geolocation = ol.Geolocation;
       var Map = ol.Map;
@@ -138,15 +108,10 @@
       var Style = ol.style.Style;
       var Overlay = ol.Overlay
       var fromLonLat = ol.proj.fromLonLat;
-
-
       var view = new View({
         center: [0, 0],
         zoom: 2
       });
-
-
-
       var map = new Map({
         layers: [
           new TileLayer({
@@ -156,7 +121,7 @@
         target: 'map',
         view: view
       });
-
+      ///////////////////////////
       {% for business in businesses %}
         var marker = new Overlay({
           position: fromLonLat([{{business["coordinates"]["longitude"]}}, {{business["coordinates"]["latitude"]}}]),
@@ -165,7 +130,6 @@
           stopEvent: false
         });
         map.addOverlay(marker);
-
       {% endfor %}
 
       var geolocation = new Geolocation({
@@ -175,25 +139,20 @@
         },
         projection: view.getProjection()
       });
-
       function el(id) {
         return document.getElementById(id);
       }
-
       geolocation.setTracking(true);
-
       // handle geolocation error.
       geolocation.on('error', function(error) {
         var info = document.getElementById('info');
         info.innerHTML = error.message;
         info.style.display = '';
       });
-
       var accuracyFeature = new Feature();
       geolocation.on('change:accuracyGeometry', function() {
         accuracyFeature.setGeometry(geolocation.getAccuracyGeometry());
       });
-
       var positionFeature = new Feature();
       positionFeature.setStyle(new Style({
         image: new CircleStyle({
@@ -207,42 +166,23 @@
           })
         })
       }));
-
       geolocation.on('change:position', function() {
         var coordinates = geolocation.getPosition();
-        navigator.geolocation.watchPosition(geo_success);
-        function geo_success(position) {
-          var lon =  position.coords.longitude;
-          var lat =  position.coords.latitude;
-          $.get(
-            "/result",
-            { lon: lon, lat: lat}
-          )
-        }
-
-
-        view.setCenter(coordinates); view.setZoom(14);
         positionFeature.setGeometry(coordinates ?
           new Point(coordinates) : null);
       });
-
-
-
       new VectorLayer({
         map: map,
         source: new VectorSource({
           features: [accuracyFeature, positionFeature]
         })
       });
-
-
     </script>
   </body>
         </main>
 
         <footer class="small text-center text-muted">
-            Data provided for free by <a href="https://www.yelp.com/">Yelp</a>. View their terms of service
-            <a href="https://www.yelp.com/static?p=tos">here</a>. Created by Rodney Lafuente Mercado.
+            Data provided for free by <a href="https://iextrading.com/developer">IEX</a>. View <a href="https://iextrading.com/api-exhibit-a/">IEX’s Terms of Use</a>.
         </footer>
 
     </body>
